internal/octogo/testdata/import_unused.ogo
// ERROR "imported and not used"
import "p"

const q = 'q'
